# ft_printf21

./: CMakeLists.txt  Makefile  a.out  author  compile.sh  d.txt  flags.c  fourth_flag.c  ft_atoi.c  ft_itoa_base.c  ft_printf.c  ft_putchar.c  ft_putstr.c  ft_strdup.c  ft_strlen.c  main.c  space.txt  spec_c_s.c  spec_d.c  spec_d_i.c  spec_f.c  spec_o.c  spec_p.c  spec_percent.c  spec_q.c  spec_u.c  spec_x.c  spec_x_X.c  specificator.c  star.c  test.txt
includes/: ft_printf.h
notrdy/: spec_e.c  spec_f.c  spec_g.c  spec_p.c  spec_x.c
tests/: a.out  pr.c  test.c
